# stock-quant-data-platform

./: .gitignore  README.md  pyproject.toml  readme.txt
data/manual/: symbol_instrument_overrides.json
data/samples/: raw_prices_sample.csv
sql/checks/: 001_foundation_checks.sql  001_foundation_checks.sql.bak2  002_price_checks.sql
sql/ddl/: 001_core_foundation.sql  001_foundation.sql  002_symbols_seed.sql  003_prices_foundation.sql  004_prices_seed.sql  005_raw_prices_foundation.sql  006_raw_stooq_prices_foundation.sql  007_raw_yfinance_prices_foundation.sql  008_raw_nasdaq_symbol_directory_foundation.sql
sql/publish/: 001_serving_projection.sql
sql/views/: 001_serving_universes.sql.bak  002_api_symbols.sql  003_api_universe_snapshots.sql  004_api_listing_status.sql  005_api_prices.sql  006_parsed_yfinance_prices.sql  007_parsed_stooq_prices.sql  008_parsed_price_union.sql  009_parsed_stooq_prices_normalized.sql  010_normalized_symbol_market_classification.sql  011_normalized_symbol_instrument_classification.sql  012_normalized_symbol_instrument_classification_current.sql  013_parsed_nasdaq_symbol_directory.sql  014_normalized_nasdaq_current_symbols.sql
src/stock_quant_data/: __init__.py
src/stock_quant_data/api/: __init__.py  app.py  app.py.bak  deps.py
src/stock_quant_data/cli/: __init__.py  main.py  main.py.bak  main.py.bak10  main.py.bak2
src/stock_quant_data/config/: __init__.py  logging.py  settings.py  settings.py.bak2
src/stock_quant_data/db/: __init__.py  connections.py  engine.py  publish.py
src/stock_quant_data/jobs/: build_core_prices.py  (+37 more)
(+25 files in other folders)
