[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-quant-data-platform"
version = "0.1.0"
description = "Scientific PIT market data platform with immutable serving releases."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "duckdb>=1.0.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "tqdm>=4.66.0",
]

[project.scripts]
sq = "stock_quant_data.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
